[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.10",
    "langchain-google-genai>=4.2.1",
    "pydantic-settings>=2.13.1",
]

[project.scripts]
chatbot = "chatbot.main:main"

[build-system]
requires = ["uv_build>=0.10.8"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.4",
    "ty>=0.0.20",
]
